fix: header title i dark mode

--- a/portal/src/components/Header/header.scss
+++ b/portal/src/components/Header/header.scss
@@ -3,14 +3,24 @@
 @import "~@fremtind/jkl-core/mixins/_all";
 @import "~@fremtind/jkl-core/_functions";
 
-$header-bg-color: jkl.$color-snohvit;
-$header-bg-color--inverted: jkl.$color-granitt;
 $header-height: rem(96px);
 $header-height--collapsed: rem(64px);
 $header-height--mobile: rem(64px);
 $header-padding: 0 jkl.$spacing-xl;
 $header-padding--right: jkl.$spacing-3xl;
 $header-padding--mobile: 0 jkl.$spacing-m;
+
+@include jkl.helper-light-mode-variables {
+    --jkl-portal-header-bg-color: #{jkl.$color-snohvit};
+    --jkl-portal-header-title-color: #{jkl.$color-granitt};
+    --jkl-portal-header-title-hover-color: #{jkl.$color-stein};
+}
+
+@include jkl.helper-dark-mode-variables {
+    --jkl-portal-header-bg-color: #{jkl.$color-granitt};
+    --jkl-portal-header-title-color: #{jkl.$color-snohvit};
+    --jkl-portal-header-title-hover-color: #{jkl.$color-varde};
+}
 
 .jkl-portal-header {
     display: flex;
@@ -38,27 +48,18 @@ $header-padding--mobile: 0 jkl.$spacing-m;
         color: inherit;
         text-decoration: none;
 
-        &:hover {
-            color: jkl.$color-stein;
+        &:hover,
+        &:focus {
+            color: var(--jkl-portal-header-title-hover-color);
         }
 
         html:not([data-mousenavigation]) &:focus {
-            color: jkl.$color-granitt;
-            font-weight: jkl.$typography-weight-bold;
+            @include no-grow-bold;
         }
     }
 
     &__menu {
         height: 100%;
-    }
-
-    *[data-theme="dark"] & {
-        background-color: $header-bg-color--inverted;
-        color: jkl.$color-snohvit;
-
-        &__title {
-            color: jkl.$color-snohvit;
-        }
     }
 
     @include from-medium-device {
